--- a/page45.html
+++ b/page45.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <header>
-        <a href="TSW-Wizard.html">
+        <a href="index.html">
         <h1>TSW Layer Wizard</h1>
         </a>
     </header>
