--- a/page3.html
+++ b/page3.html
@@ -42,8 +42,8 @@
         <ul>
             <li>BR 1442 Talent 2 MD</li>
             <li>BR 182 DB (DLC)</li>
-            <li>766.2 DBpbzfa DB (requires BR182)</li>
-            <li>BR 143 DB (requires Ruhr Sieg Nord, Main Spessart Bahn or Tharandter Rampe)</li>
+            <li>Doppelstockwagen (requires BR182)</li>
+            <li>BR 143 DB (requires Ruhr Sieg Nord, Dresden Riesa or Tharandter Rampe)</li>
             <!-- Add more items as needed -->
         </ul>
     </div>
