--- a/page43.html
+++ b/page43.html
@@ -46,6 +46,8 @@
             <li>Amfleet Cab Car</li>
             <li>Amtrak Acela (DLC)</li>
             <li>CSX GP38-2 (requires Sand Patch Grade)</li>
+            <li>LIRR M7 (AI only, requires Long Island Railroad)</li>
+            <li>LIRR M3 (AI only, requires Long Island Railroad)</li>
             
     </div>
     
