--- a/page52.html
+++ b/page52.html
@@ -49,8 +49,8 @@
             <li>Class 40 BLU (requires BR Heavy Freight Pack)</li>
             <li>Class 45/1 BLU (requires Northern Transpennine)</li>
             <li>LMS Stanier 8F (requires Spirit of Steam)</li>
-            <li>Class 37/5 RF (requires Tees Valley Line)</li>
-            <li>Class 37/5 RSR (requires West Cornwall Local)</li>
+            <li>Class 37/5 RF (AI only,requires Tees Valley Line)</li>
+            <li>Class 37/5 RSR (AI only,requires West Cornwall Local)</li>
             
     </div>
     
