--- a/page2.html
+++ b/page2.html
@@ -52,6 +52,7 @@
             <li>Class 31/1 BLU (requires Tees Valley Line)</li>
             <li>Class 45/1 BLU (requires Northern Transpennine)</li>
             <li>Class 47/4 BLU (requires Northern Transpennine)</li>
+            <li>1972 MkII Tube Stock LU (Scenery only, requires Bakerloo Line)</li>
         </ul>
     </div>
 </body>
