--- a/index.html
+++ b/index.html
@@ -292,6 +292,9 @@
             <a href="page57.html"><img src="FCL.jpg"></a>
             <p>Fife Circle Line</p>
         </div>
+        <div class="box">
+            <a href="page58.html"><img src=SBG.jpg"></a>
+            <p>Semmeringbahn</p>
         <!-- Repeat this div 64 times for each box -->
     </div>
 </body>
