--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <p>Fife Circle Line</p>
         </div>
         <div class="box">
-            <a href="page58.html"><img src=SBN.jpeg"></a>
+            <a href="page58.html"><img src="SBG.jpg"></a>
             <p>Semmeringbahn</p>
         <!-- Repeat this div 64 times for each box -->
     </div>
