--- a/page58.html
+++ b/page58.html
@@ -43,7 +43,7 @@
             <li>OBB 1116</li>
             <li>OBB 4024</li>
             <li>DB BR 103 (requires Linke Rheinstrecke)</li>
-            <li>DB 193 Vectron (DLC)</li>
+            <li>BR 193 Vectron (DLC)</li>
             <li>Class 47 (requires Blackpool Branches)</li>
             
             
