--- a/page6.html
+++ b/page6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Long Island Railroad</title>
+    <title>Long Island Railroad V1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -38,7 +38,7 @@
         </a>
     </header>
     <div class="container">
-        <h2>Long Island Railroad Layers</h2>
+        <h2>Long Island Railroad V1 Layers</h2>
         <ul>
             <li>LIRR M7</li>
             <li>LIRR M3 (DLC)</li>
