--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="box">
             <a href="page6.html"><img src="LIRR.jpg"></a>
-            <p>Long Island Railroad</p>
+            <p>Long Island Railroad V1</p>
         </div>
         <div class="box">
             <a href="page7.html"><img src="NTP.jpg"></a>
@@ -295,7 +295,10 @@
         <div class="box">
             <a href="page58.html"><img src="SBN.jpeg"></a>
             <p>Semmeringbahn</p>
-        <!-- Repeat this div 64 times for each box -->
     </div>
+         <div class="box">
+            <a href="page57.html"><img src="LIRR2.png"></a>
+            <p>Long Island Railroad V2</p>
+        </div>
 </body>
 </html>
