--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <p>Fife Circle Line</p>
         </div>
         <div class="box">
-            <a href="page58.html"><img src="SBN.jpeg"></a>
+            <a href="page58.html"><img src="SBG.jpeg"></a>
             <p>Semmeringbahn</p>
     </div>
          <div class="box">
