--- a/page59.html
+++ b/page59.html
@@ -38,11 +38,16 @@
         </a>
     </header>
     <div class="container">
-        <h2>Long Island Railroad V2 Layers</h2>
+        <h2>Long Island Railroad V2 Layers</h2> 
         <ul>
             <li>LIRR M9</li>
             <li>LIRR M7</li>
             <li>LIRR M3 (DLC)</li>
+            <li>ALP-46 NJT (AI only requires New York Trenton)</li>
+            <li>Multi Level Commuter Cab Car NJT (Static only requires New York Trenton)</li>
+            <li>ACS-64 V AMTK (Static only requires New York Trenton)</li>
+            <li>Amfleet Cab Car (Static only requires New York Trenton)</li>
+            <li>Amtrak Acela (Static only requires New York Trenton & Amtrak Acela add-on)</li>
         </ul>
     </div>
 </body>
