--- a/page59.html
+++ b/page59.html
@@ -43,7 +43,7 @@
             <li>LIRR M9</li>
             <li>LIRR M7</li>
             <li>LIRR M3 (DLC)</li>
-            <li>ALP-46 NJT (AI only requires New York Trenton)</li>
+            <li>ALP-46 NJT (Static only requires New York Trenton)</li>
             <li>Multi Level Commuter Cab Car NJT (Static only requires New York Trenton)</li>
             <li>ACS-64 V AMTK (Static only requires New York Trenton)</li>
             <li>Amfleet Cab Car (Static only requires New York Trenton)</li>
