--- a/page59.html
+++ b/page59.html
@@ -47,7 +47,7 @@
             <li>Multi Level Commuter Cab Car NJT (Static only requires New York Trenton)</li>
             <li>ACS-64 V AMTK (Static only requires New York Trenton)</li>
             <li>Amfleet Cab Car (Static only requires New York Trenton)</li>
-            <li>Amtrak Acela (Static only requires New York Trenton & Amtrak Acela add-on)</li>
+            <li>Amtrak Acela (Static only requires Amtrak Acela add-on)</li>
         </ul>
     </div>
 </body>
