--- a/page46.html
+++ b/page46.html
@@ -44,9 +44,12 @@
             <li>Class 43 EMT</li>
             <li>Class 66 (requires East Coastway or Southeastern High Speed)</li>
             <li>Class 45/1 (requires Northern Transpennine)</li>
-            <li>Class 37/7 EPX (DLC)</li>
+            <li>Class 47/4 (Scenery only, requires Blackpool Branches)</li>
+            <li>Class 37/7 EPX (Requires Rail Operations Group Class 37))</li>
             <li>LMS Jubilee (requires Spirit of Steam)</li>
             <Li>Class 31 (Scenery only, requires Tees Valley Line)</Li>
+            <li>Flying Scotsman (requires Flying Scotsman add-on)</li>
+            <li>Class 08 (Scenery only, requires Blackpool Branches)</li>
             
     </div>
     
