--- a/page56.html
+++ b/page56.html
@@ -48,7 +48,8 @@
             <li>Class 37/7 EPX (DLC)</li>
             <li>LMS Jubilee (requires Peak Forest)</li>
             <li>Class 801 LNER (AI only,requires ECML Peterborough to Doncaster)</li>
-            <li>Class 700 (AI only,DLC)</li>
+            <li>Class 700 (AI only,requires Class 700 Add On)</li>
+            <li>>Class 387 GX Unbranded (AI only, requires Brighton Mainline)</li>
             
             
     </div>
