--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
         .box p {
             margin-top: 10px;
         }
+        .top-right-message {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -58,6 +67,9 @@
         <a href="index.html">
         <h1>TSW Layer Wizard</h1>
         </a>
+         <div class="top-right-message">
+            Your Message Here
+        </div>
     </header>
     <div class="description">
         <p>Welcome to the unofficial TSW layer wizard, select a route to find all it's available layers.</p>
