--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h1>TSW Layer Wizard</h1>
         </a>
          <div class="top-right-message">
-            Your Message Here
+            Message of the Week: You are Valid!
         </div>
     </header>
     <div class="description">
