--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #FFA500;
         }
         header {
-            background-color: #333;
+            background-color: #FFA500;
             color: #fff;
             padding: 20px;
             text-align: center;
