--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #FFA500;
+            background-color: #F5F5DC;
         }
         header {
-            background-color: #FFA500;
+            background-color: #F5F5DC;
             color: #fff;
             padding: 20px;
             text-align: center;
