--- a/page5.html
+++ b/page5.html
@@ -48,6 +48,7 @@
             <li>DB BR 112.1 (requires Hamburg Lubeck)</li>
             <li>BR 193 Vectron (DLC)</li>
             <li>DB BR 182 (requires Rapid Transit)</li>
+            <li>DB BR 218 (requires DB BR 218 Add on) </li>
             <!-- Add more items as needed -->
         </ul>
     </div>
