--- a/page8.html
+++ b/page8.html
@@ -50,6 +50,7 @@
             <li>DB BR 182 (requires Rapid Transit)</li>
             <li>DB BR 143 (requires Ruhr Sieg Nord,Dresden Riesa or Tharandter Rampe)</li>
             <li>DB BR 110 (requires Bremen Oldenburg)</li>
+            <li>DB BR 218 (requires DB BR 218 Add on)</li>
             <!-- Add more items as needed -->
         </ul>
     </div>
