--- a/page18.html
+++ b/page18.html
@@ -53,6 +53,7 @@
             <li>DB BR 182 (requires Rapid Transit)</li>
             <li>BR 185.5 MRCE (requires Rhein Ruhr Osten)</li>
             <li>DB BR 425 (Requires Hauptstrecke Rhein Ruhr)</li>
+            <li>DB BR 218 (requires DB BR 218 Add on)</li>
     </div>
     
 </body>
