--- a/page3.html
+++ b/page3.html
@@ -44,6 +44,7 @@
             <li>BR 182 DB (DLC)</li>
             <li>Doppelstockwagen (requires BR182)</li>
             <li>BR 143 DB (requires Ruhr Sieg Nord, Dresden Riesa or Tharandter Rampe)</li>
+            <li>DB BR 218 (requires DB BR 218 Add on)</li>
             <!-- Add more items as needed -->
         </ul>
     </div>
