--- a/page23.html
+++ b/page23.html
@@ -50,6 +50,7 @@
             <li>DB BR 155 (requires Ruhr Sieg Nord)</li>
             <li>BR 185.5 MRCE (requires Rhein Ruhr Osten)</li>
             <li>DB BR 406 (requires Koln-Aachen)</li>
+            <li>DB BR 218 (requires DB BR 218 Add on)</li>
     </div>
     
 </body>
