--- a/page27.html
+++ b/page27.html
@@ -53,6 +53,7 @@
             <li>DB BR 110 (requires Bremen Oldenburg)</li>
             <li>DB BR 155 (requires Ruhr Sieg Nord)</li>
             <li>DB BR 406 (requires Koln-Aachen)</li>
+            <li>DB BR 218 (requires DB BR 218 Add on)</li>
             
     </div>
     
