--- a/page53.html
+++ b/page53.html
@@ -45,6 +45,7 @@
             <li>DB BR 628.2 VR (requires Niddertalbahn)</li>
             <li>DB BR 612 (requires Tharandter Rampe)</li>
             <li>DB G6 Shunter (requires Rhein Ruhr Osten)</li>
+            <li>DB BR 218 (requires DB BR 218 Add on)</li>
             
             
     </div>
