--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
         }
 
         .top-right-message {
-            position: absolute;
-            top: 20px;
-            right: 20px;
             background-color: rgba(0, 0, 0, 0.7);
             color: #fff;
             padding: 10px 20px;
             border-radius: 5px;
             font-size: 0.9rem;
+            margin: 10px auto;
+            max-width: fit-content;
         }
 
         @media (max-width: 768px) {
