--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #ccc;
+            background-color: #000000;
             transition: 0.4s;
             border-radius: 34px;
         }
@@ -146,7 +146,7 @@
             width: 26px;
             left: 4px;
             bottom: 4px;
-            background-color: white;
+            background-color: black;
             transition: 0.4s;
             border-radius: 50%;
         }
