--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
             margin: 0;
             padding: 0;
             background-color: #F5F5DC;
+            color: #000;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         header {
             background-color: #F5F5DC;
-            color: #fff;
+            color: #000;
             padding: 20px;
             text-align: center;
+            transition: background-color 0.3s, color 0.3s;
             position: relative;
         }
 
@@ -25,6 +28,7 @@
             color: #fff;
             padding: 20px;
             text-align: center;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         .container {
@@ -40,6 +44,7 @@
             text-align: center;
             padding: 20px;
             box-sizing: border-box;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         .box img {
@@ -59,6 +64,7 @@
             font-size: 0.9rem;
             margin: 10px auto;
             max-width: fit-content;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         @media (max-width: 768px) {
@@ -81,25 +87,33 @@
             .top-right-message {
                 padding: 5px 10px;
             }
-             /* Dark mode styles */
+        }
+
+        /* Dark mode styles */
         body.dark-mode {
-            background-color: #000000;
+            background-color: #121212;
             color: #ffffff;
         }
 
         header.dark-mode {
-            background-color: #000000;
+            background-color: #1f1f1f;
             color: #ffffff;
         }
 
+        .top-right-message.dark-mode {
+            background-color: rgba(255, 255, 255, 0.7);
+            color: #000;
+        }
+
         .description.dark-mode {
-            background-color: #000000;
+            background-color: #333;
             color: #ffffff;
         }
 
         .box.dark-mode {
-            background-color: #000000;
+            background-color: #1f1f1f;
             border: 1px solid #444;
+            color: #ffffff;
         }
 
         /* Toggle switch */
@@ -134,7 +148,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #000000;
+            background-color: #ccc;
             transition: 0.4s;
             border-radius: 34px;
         }
@@ -146,7 +160,7 @@
             width: 26px;
             left: 4px;
             bottom: 4px;
-            background-color: black;
+            background-color: white;
             transition: 0.4s;
             border-radius: 50%;
         }
@@ -166,11 +180,12 @@
             <h1>TSW Layer Wizard</h1>
         </a>
         <div class="toggle-container">
-        <span class="toggle-label">Dark Mode:</span>
-        <label class="toggle-switch">
-            <input type="checkbox" id="theme-toggle">
-            <span class="slider"></span>
-        </label>
+            <span class="toggle-label">Dark Mode:</span>
+            <label class="toggle-switch">
+                <input type="checkbox" id="theme-toggle">
+                <span class="slider"></span>
+            </label>
+        </div>
         <div class="top-right-message">
             Message of the Month: You are Valid!
         </div>
@@ -245,207 +260,40 @@
             <p>Bakerloo Line</p>
         </div>
         <div class="box">
-            <a href="page17.html"><img src="IOW.jpeg"></a>
+            <a href="page17.html"><img src="IOW.jpeg" alt="Isle of Wight"></a>
             <p>Isle of Wight</p>
         </div>
         <div class="box">
-            <a href="page18.html"><img src="HMA.jpg"></a>
-            <p>Hauptstrecke Munchen Augsburg</p>
+            <a href="page18.html"><img src="LGV.jpg" alt="LGV Méditerranée"></a>
+            <p>LGV Méditerranée</p>
         </div>
         <div class="box">
-            <a href="page19.html"><img src="LGV.jpeg"></a>
-            <p>LGV Medditerranee</p>
-        </div>
-        <div class="box">
-            <a href="page20.html"><img src="SEHS.jpg"></a>
+            <a href="page19.html"><img src="SEHS.jpg" alt="Southeastern Highspeed"></a>
             <p>Southeastern Highspeed</p>
         </div>
         <div class="box">
-            <a href="page21.html"><img src="ARL.jpg"></a>
-            <p>Arosa Linie</p>
-        </div>
-        <div class="box">
-            <a href="page22.html"><img src="CRR.jpg"></a>
+            <a href="page20.html"><img src="CNL.jpg" alt="Clinchfield Railroad"></a>
             <p>Clinchfield Railroad</p>
         </div>
         <div class="box">
-            <a href="page23.html"><img src="HBL.jpeg"></a>
-            <p>Hamburg-Lubeck</p>
+            <a href="page21.html"><img src="Arosa.jpg" alt="Arosa"></a>
+            <p>Arosa</p>
         </div>
-        <div class="box">
-            <a href="page24.html"><img src="CCL.jpg"></a>
-            <p>Cathcart Circle Line</p>
-        </div>
-        <div class="box">
-            <a href="page25.html"><img src="CC.jpeg"></a>
-            <p>Cane Creek</p>
-        </div>
-        <div class="box">
-            <a href="page26.html"><img src="BP.jpeg"></a>
-            <p>Boston Sprinter</p>
-        </div>
-        <div class="box">
-            <a href="page27.html"><img src="DRA.jpg"></a>
-            <p>Nahverkehr Dresden</p>
-        </div>
-        <div class="box">
-            <a href="page28.html"><img src="BML.jpeg"></a>
-            <p>Brighton Main Line</p>
-        </div>
-        <div class="box">
-            <a href="page29.html"><img src="WCL.jpg"></a>
-            <p>West Cornwall Local</p>
-        </div>
-        <div class="box">
-            <a href="page30.html"><img src="SMH.jpg"></a>
-            <p>Sherman Hill</p>
-        </div>
-        <div class="box">
-            <a href="page31.html"><img src="DCZ.jpg"></a>
-            <p>Tharandter Rampe</p>
-        </div>
-        <div class="box">
-            <a href="page32.html"><img src="HRL.jpeg"></a>
-            <p>Harlem Line</p>
-        </div>
-        <div class="box">
-            <a href="page33.html"><img src="LZN.jpeg"></a>
-            <p>Luzern-Sursee</p>
-        </div>
-        <div class="box">
-            <a href="page34.html"><img src="HSC.jpg"></a>
-            <p>Horseshoe Curve</p>
-        </div>
-        <div class="box">
-            <a href="page35.html"><img src="SOS.jpeg"></a>
-            <p>Spirit of Steam</p>
-        </div>
-        <div class="box">
-            <a href="page36.html"><img src="ISL.jpeg"></a>
-            <p>Island Line 2022</p>
-        </div>
-        <div class="box">
-            <a href="page37.html"><img src="CJP.jpeg"></a>
-            <p>Cajon Pass</p>
-        </div>
-        <div class="box">
-            <a href="page38.html"><img src="KWG.jpeg"></a>
-            <p>Kassel-Wurzburg</p>
-        </div>
-        <div class="box">
-            <a href="page39.html"><img src="BCC.jpeg"></a>
-            <p>Birmingham Cross City</p>
-        </div>
-        <div class="box">
-            <a href="page40.html"><img src="BRO.jpeg"></a>
-            <p>Bremen-Oldenburg</p>
-        </div>
-        <div class="box">
-            <a href="page41.html"><img src="HDX.jpeg"></a>
-            <p>Holiday Express</p>
-        </div>
-        <div class="box">
-            <a href="page42.html"><img src="EDN.jpeg"></a>
-            <p>Edinburgh-Glasgow</p>
-        </div>
-        <div class="box">
-            <a href="page43.html"><img src="NYT.jpeg"></a>
-            <p>New York-Trenton</p>
-        </div>
-        <div class="box">
-            <a href="page44.html"><img src="LFR.jpeg"></a>
-            <p>Linke Rheinstrecke</p>
-        </div>
-        <div class="box">
-            <a href="page45.html"><img src="NTB.jpeg"></a>
-            <p>Niddertalbahn</p>
-        </div>
-        <div class="box">
-            <a href="page46.html"><img src="MML.jpeg"></a>
-            <p>Midland Main Line</p>
-        </div>
-        <div class="box">
-            <a href="page47.html"><img src="PFR.jpeg"></a>
-            <p>Peak Forest Railway</p>
-        </div>
-        <div class="box">
-            <a href="page48.html"><img src="MGP.jpeg"></a>
-            <p>Glossop Line</p>
-        </div>
-        <div class="box">
-            <a href="page49.html"><img src="VBG.jpeg"></a>
-            <p>S-Bahn Voralberg</p>
-        </div>
-        <div class="box">
-            <a href="page50.html"><img src="ECML.jpeg"></a>
-            <p>ECML: Peterborough to Doncaster</p>
-        </div>
-        <div class="box">
-            <a href="page51.html"><img src="AVL.jpeg"></a>
-            <p>Antelope Valley Line</p>
-        </div>
-        <div class="box">
-            <a href="page52.html"><img src="BPO.jpeg"></a>
-            <p>Blackpool Branches</p>
-        </div>
-        <div class="box">
-            <a href="page53.html"><img src="MTB.jpeg"></a>
-            <p>Maintalbahn</p>
-        </div>
-        <div class="box">
-            <a href="page54.html"><img src="BNL.jpeg"></a>
-            <p>Berninalinie</p>
-        </div>
-        <div class="box">
-            <a href="page55.html"><img src="SRM.jpeg"></a>
-            <p>Salzburg-Rosenheim</p>
-        </div>
-        <div class="box">
-            <a href="page56.html"><img src="GBL.jpg"></a>
-            <p>London Overground: Suffragette Line</p>
-        </div>
-        <div class="box">
-            <a href="page57.html"><img src="FCL.jpg"></a>
-            <p>Fife Circle Line</p>
-        </div>
-        <div class="box">
-            <a href="page58.html"><img src="SBG.jpeg"></a>
-            <p>Semmeringbahn</p>
     </div>
-         <div class="box">
-            <a href="page59.html"><img src="LIRR2.png"></a>
-            <p>Long Island Railroad V2</p>
-        </div>
     <script>
         const toggleSwitch = document.getElementById('theme-toggle');
-        const currentTheme = localStorage.getItem('theme');
 
-        if (currentTheme) {
-            document.body.classList.add(currentTheme);
-            document.querySelectorAll('header, .description, .box').forEach(element => {
-                element.classList.add(currentTheme);
+        toggleSwitch.addEventListener('change', () => {
+            document.body.classList.toggle('dark-mode');
+            document.querySelector('header').classList.toggle('dark-mode');
+            document.querySelector('.top-right-message').classList.toggle('dark-mode');
+            document.querySelector('.description').classList.toggle('dark-mode');
+
+            const boxes = document.querySelectorAll('.box');
+            boxes.forEach(box => {
+                box.classList.toggle('dark-mode');
             });
-            if (currentTheme === 'dark-mode') {
-                toggleSwitch.checked = true;
-            }
-        }
-
-        toggleSwitch.addEventListener('change', function() {
-            if (this.checked) {
-                document.body.classList.add('dark-mode');
-                document.querySelectorAll('header, .description, .box').forEach(element => {
-                    element.classList.add('dark-mode');
-                });
-                localStorage.setItem('theme', 'dark-mode');
-            } else {
-                document.body.classList.remove('dark-mode');
-                document.querySelectorAll('header, .description, .box').forEach(element => {
-                    element.classList.remove('dark-mode');
-                });
-                localStorage.setItem('theme', 'light-mode');
-            }
         });
     </script>
 </body>
-    
 </html>
