--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <p>Welcome to the unofficial TSW layer wizard, select a route to find all its available layers.</p>
     </div>
     <div class="container">
-        <!-- Repeat this div for each box -->
+      <!-- Repeat this div for each box -->
         <div class="box">
             <a href="page1.html"><img src="SPG.jpg" alt="Sand Patch Grade"></a>
             <p>Sand Patch Grade</p>
@@ -260,24 +260,176 @@
             <p>Bakerloo Line</p>
         </div>
         <div class="box">
-            <a href="page17.html"><img src="IOW.jpeg" alt="Isle of Wight"></a>
+            <a href="page17.html"><img src="IOW.jpeg"></a>
             <p>Isle of Wight</p>
         </div>
         <div class="box">
-            <a href="page18.html"><img src="LGV.jpg" alt="LGV Méditerranée"></a>
-            <p>LGV Méditerranée</p>
+            <a href="page18.html"><img src="HMA.jpg"></a>
+            <p>Hauptstrecke Munchen Augsburg</p>
         </div>
         <div class="box">
-            <a href="page19.html"><img src="SEHS.jpg" alt="Southeastern Highspeed"></a>
+            <a href="page19.html"><img src="LGV.jpeg"></a>
+            <p>LGV Medditerranee</p>
+        </div>
+        <div class="box">
+            <a href="page20.html"><img src="SEHS.jpg"></a>
             <p>Southeastern Highspeed</p>
         </div>
         <div class="box">
-            <a href="page20.html"><img src="CNL.jpg" alt="Clinchfield Railroad"></a>
+            <a href="page21.html"><img src="ARL.jpg"></a>
+            <p>Arosa Linie</p>
+        </div>
+        <div class="box">
+            <a href="page22.html"><img src="CRR.jpg"></a>
             <p>Clinchfield Railroad</p>
         </div>
         <div class="box">
-            <a href="page21.html"><img src="Arosa.jpg" alt="Arosa"></a>
-            <p>Arosa</p>
+            <a href="page23.html"><img src="HBL.jpeg"></a>
+            <p>Hamburg-Lubeck</p>
+        </div>
+        <div class="box">
+            <a href="page24.html"><img src="CCL.jpg"></a>
+            <p>Cathcart Circle Line</p>
+        </div>
+        <div class="box">
+            <a href="page25.html"><img src="CC.jpeg"></a>
+            <p>Cane Creek</p>
+        </div>
+        <div class="box">
+            <a href="page26.html"><img src="BP.jpeg"></a>
+            <p>Boston Sprinter</p>
+        </div>
+        <div class="box">
+            <a href="page27.html"><img src="DRA.jpg"></a>
+            <p>Nahverkehr Dresden</p>
+        </div>
+        <div class="box">
+            <a href="page28.html"><img src="BML.jpeg"></a>
+            <p>Brighton Main Line</p>
+        </div>
+        <div class="box">
+            <a href="page29.html"><img src="WCL.jpg"></a>
+            <p>West Cornwall Local</p>
+        </div>
+        <div class="box">
+            <a href="page30.html"><img src="SMH.jpg"></a>
+            <p>Sherman Hill</p>
+        </div>
+        <div class="box">
+            <a href="page31.html"><img src="DCZ.jpg"></a>
+            <p>Tharandter Rampe</p>
+        </div>
+        <div class="box">
+            <a href="page32.html"><img src="HRL.jpeg"></a>
+            <p>Harlem Line</p>
+        </div>
+        <div class="box">
+            <a href="page33.html"><img src="LZN.jpeg"></a>
+            <p>Luzern-Sursee</p>
+        </div>
+        <div class="box">
+            <a href="page34.html"><img src="HSC.jpg"></a>
+            <p>Horseshoe Curve</p>
+        </div>
+        <div class="box">
+            <a href="page35.html"><img src="SOS.jpeg"></a>
+            <p>Spirit of Steam</p>
+        </div>
+        <div class="box">
+            <a href="page36.html"><img src="ISL.jpeg"></a>
+            <p>Island Line 2022</p>
+        </div>
+        <div class="box">
+            <a href="page37.html"><img src="CJP.jpeg"></a>
+            <p>Cajon Pass</p>
+        </div>
+        <div class="box">
+            <a href="page38.html"><img src="KWG.jpeg"></a>
+            <p>Kassel-Wurzburg</p>
+        </div>
+        <div class="box">
+            <a href="page39.html"><img src="BCC.jpeg"></a>
+            <p>Birmingham Cross City</p>
+        </div>
+        <div class="box">
+            <a href="page40.html"><img src="BRO.jpeg"></a>
+            <p>Bremen-Oldenburg</p>
+        </div>
+        <div class="box">
+            <a href="page41.html"><img src="HDX.jpeg"></a>
+            <p>Holiday Express</p>
+        </div>
+        <div class="box">
+            <a href="page42.html"><img src="EDN.jpeg"></a>
+            <p>Edinburgh-Glasgow</p>
+        </div>
+        <div class="box">
+            <a href="page43.html"><img src="NYT.jpeg"></a>
+            <p>New York-Trenton</p>
+        </div>
+        <div class="box">
+            <a href="page44.html"><img src="LFR.jpeg"></a>
+            <p>Linke Rheinstrecke</p>
+        </div>
+        <div class="box">
+            <a href="page45.html"><img src="NTB.jpeg"></a>
+            <p>Niddertalbahn</p>
+        </div>
+        <div class="box">
+            <a href="page46.html"><img src="MML.jpeg"></a>
+            <p>Midland Main Line</p>
+        </div>
+        <div class="box">
+            <a href="page47.html"><img src="PFR.jpeg"></a>
+            <p>Peak Forest Railway</p>
+        </div>
+        <div class="box">
+            <a href="page48.html"><img src="MGP.jpeg"></a>
+            <p>Glossop Line</p>
+        </div>
+        <div class="box">
+            <a href="page49.html"><img src="VBG.jpeg"></a>
+            <p>S-Bahn Voralberg</p>
+        </div>
+        <div class="box">
+            <a href="page50.html"><img src="ECML.jpeg"></a>
+            <p>ECML: Peterborough to Doncaster</p>
+        </div>
+        <div class="box">
+            <a href="page51.html"><img src="AVL.jpeg"></a>
+            <p>Antelope Valley Line</p>
+        </div>
+        <div class="box">
+            <a href="page52.html"><img src="BPO.jpeg"></a>
+            <p>Blackpool Branches</p>
+        </div>
+        <div class="box">
+            <a href="page53.html"><img src="MTB.jpeg"></a>
+            <p>Maintalbahn</p>
+        </div>
+        <div class="box">
+            <a href="page54.html"><img src="BNL.jpeg"></a>
+            <p>Berninalinie</p>
+        </div>
+        <div class="box">
+            <a href="page55.html"><img src="SRM.jpeg"></a>
+            <p>Salzburg-Rosenheim</p>
+        </div>
+        <div class="box">
+            <a href="page56.html"><img src="GBL.jpg"></a>
+            <p>London Overground: Suffragette Line</p>
+        </div>
+        <div class="box">
+            <a href="page57.html"><img src="FCL.jpg"></a>
+            <p>Fife Circle Line</p>
+        </div>
+        <div class="box">
+            <a href="page58.html"><img src="SBG.jpeg"></a>
+            <p>Semmeringbahn</p>
+    </div>
+         <div class="box">
+            <a href="page59.html"><img src="LIRR2.png"></a>
+            <p>Long Island Railroad V2</p>
         </div>
     </div>
     <script>
