380 Update to Cathcart

--- a/page24.html
+++ b/page24.html
@@ -46,6 +46,30 @@
             <li>Class 31/1 BLU (requires Tees Valley Line)</li>
             <Li>Class 37/5 (requires Tees Valley Line)</Li>
             <li>Class 47/4 BLU (requires Northern Transpennine)</li>
+        </ul>
+        <h3>Cathcart Circle Line 2024 Layers (Requires Class 380 DLC)</h3>
+        <ul>
+            <li>Class 314 ScR</li>
+            <li>Class 380 ScR (requires Class 380 DLC)</li>
+            <li>Class 385 ScR (requires Edinburgh Glasgow)</li>
+            <li>Class 170 ScR (requires Fife Circle Line)</li>
+            <li>Class 158 ScR (requires Scotrail Class 158 DLC)</li>
+            <li>Class 66 EWS (requires Southeastern High Speed)</li>
+            <li>Class 66 ONE (requires Engineering Express Pack</li>
+            <li>Class 66 DRS (requires Engineering Express Pack</li>
+            <li>Class 66 RHTT (requires Railhead Treatment Train DLC)</li>
+            <li>Class 20 RF (requires Tees Valley Line and Class 20 DLC)</li>
+            <li>Class 31/1 BLU (requires Tees Valley Line and Class 31 DLC)</li>
+            <li>Class 33 GRN (requires West Somerset Railway and Class 33 DLC)</li>
+            <li>Class 37/5 (requires Tees Valley line or West Cornwall Local)</li>
+            <li>Class 40 BLU (requires Northern Trans Pennine and BR Heavy Freight Pack)</li>
+            <li>Class 45/1 BLU (requires Northern Trans Pennine)</li>
+            <li>Class 47/4 BLU (requires Northern Trans Pennine)</li>
+            <li>Class 47/4 HI (requires Blackpool Branches)</li>
+            <li>Class 52 BLU (requires Diesel Legends pack)</li>
+            <li>Class 801 Azuma (AI only, requires East Coast Main Line)</li>
+        </ul>
+        <h4>Note that some Diesel railtours may need the Flying Scotsman to work</h4>
             
     </div>
     
