--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </label>
         </div>
         <div class="top-right-message">
-            Message of the Month: You are Valid!
+            Class 380 Avilable Now!
         </div>
     </header>
     <div class="description">
