--- a/page2.html
+++ b/page2.html
@@ -43,6 +43,9 @@
             <li>Class 166 GWG</li>
             <li>High Speed Train GWG</li>
             <li>Class 66 EWS</li>
+            <li>Cargo Line Petroleum (DLC)</li>
+            <li>Cargo Line Aggregates (DLC)</li>
+            <li>1972 MkII Tube Stock LU (Scenery only, requires Bakerloo Line)</li>
             </ul> 
         <h3>Diesel Legends Timetable</h3>
         <ul>
@@ -52,7 +55,6 @@
             <li>Class 31/1 BLU (requires Tees Valley Line)</li>
             <li>Class 45/1 BLU (requires Northern Transpennine)</li>
             <li>Class 47/4 BLU (requires Northern Transpennine)</li>
-            <li>1972 MkII Tube Stock LU (Scenery only, requires Bakerloo Line)</li>
         </ul>
     </div>
 </body>
