--- a/page46.html
+++ b/page46.html
@@ -50,7 +50,8 @@
             <Li>Class 31 (Scenery only, requires Tees Valley Line)</Li>
             <li>Flying Scotsman (requires Flying Scotsman add-on)</li>
             <li>Class 08 (Scenery only, requires Blackpool Branches)</li>
-            
+            <li>Cargo Line Petroleum (DLC)</li>
+            <li>Cargo Line Aggregates (DLC)</li>
     </div>
     
 </body>
