--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </label>
         </div>
         <div class="top-right-message">
-            Class 380 Available Now!
+            Join the TSC Discord server!
         </div>
     </header>
     <div class="description">
