--- a/index.html
+++ b/index.html
@@ -431,6 +431,18 @@
             <a href="page59.html"><img src="LIRR2.png"></a>
             <p>Long Island Railroad V2</p>
         </div>
+        <div class="box">
+            <a href="page60.html"><img src=EMK.jpeg"></a>
+            <p>WCML: London Euston to Milton Keynes</p>
+        </div>
+        <div class="box">
+            <a href="page61.html"><img src=SBD.jpeg"></a>
+            <p>San Bernadino Line</p>
+        </div>
+        <div class="box">
+            <a href="page62.html"><img src=FTF.jpeg"></a>
+            <p>Frankfurt to Fulda</p>
+        </div>
     </div>
     <script>
         const toggleSwitch = document.getElementById('theme-toggle');
