--- a/index.html
+++ b/index.html
@@ -432,15 +432,15 @@
             <p>Long Island Railroad V2</p>
         </div>
         <div class="box">
-            <a href="page60.html"><img src=EMK.jpeg"></a>
+            <a href="page60.html"><img src="EMK.jpeg"></a>
             <p>WCML: London Euston to Milton Keynes</p>
         </div>
         <div class="box">
-            <a href="page61.html"><img src=SBD.jpeg"></a>
+            <a href="page61.html"><img src="SBD.jpeg"></a>
             <p>San Bernadino Line</p>
         </div>
         <div class="box">
-            <a href="page62.html"><img src=FTF.jpeg"></a>
+            <a href="page62.html"><img src="FTF.jpeg"></a>
             <p>Frankfurt to Fulda</p>
         </div>
     </div>
