--- a/page24.html
+++ b/page24.html
@@ -68,6 +68,8 @@
             <li>Class 47/4 HI (requires Blackpool Branches)</li>
             <li>Class 52 BLU (requires Diesel Legends pack)</li>
             <li>Class 801 Azuma (AI only, requires East Coast Main Line)</li>
+            <li>Class 350 LNR (AI only, requires WCML South</li>
+            <li>Class 390 AWC (AI only, requires Class 390 add on)</li>
         </ul>
         <h4>Note that some Diesel railtours may need the Flying Scotsman to work</h4>
             
