--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             <p>Frankfurt to Fulda</p>
         </div>
          <div class="box">
-            <a href="page63.html"><img src="MBTA.jpg"></a>
+            <a href="page63.html"><img src="MBTA.jpeg"></a>
             <p>MBTA Commuter</p>
         </div>
     </div>
